<resources>
    <string name="app_name">May I?</string>
    <string name="action_settings">Settings</string>
    <string name="enter_players_label">Enter Players</string>
    <string name="player_label">Player</string>
    <string name="score_label">Score</string>
    <string name="total_label">Total</string>
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>
</resources>
